Stop using community docker compose
The community docker compose role uses the Python module, which has been
replaced with a Go rewrite. I've adapted the playbook to call the system
utility directly, though I'm not sure how to get it to detect whether it
was actually changed or not, seeing as the return code is the same
either way...

--- a/inventory.yml
+++ b/inventory.yml
@@ -15,6 +15,11 @@ all:
         gaming:
         seedling:
 
+    workstations:
+      hosts:
+        fornax:
+        arch-dev:
+
   vars:
     ansible_python_interpreter: auto_silent
     ansible_user: ansible
