Add titania, add requirements.yml
New computer time! Also added a requirements.yml, which should make managing
Galaxy dependencies significantly easier.

--- a/deploy.yml
+++ b/deploy.yml
@@ -56,7 +56,15 @@
     - nfs_client
     - docker
     - dotfiles_copy
-    
+
+- hosts: workstations
+  become: true
+  gather_facts: false
+  ignore_unreachable: true
+  roles:
+    - arch-workstation
+    - dotfiles_clone
+
 - hosts: apps
   become: true
   gather_facts: false
@@ -72,13 +80,12 @@
     - dotfiles_copy
     - more_users
 
-- hosts: arch-dev
+- hosts: titania
   become: true
   gather_facts: false
   ignore_unreachable: true
   roles:
-    - arch-workstation
-    - dotfiles_clone
+    - arch-desktop
 
 - hosts: fornax
   become: true
