Use ansible-lint
Lots of little changes here due to the introduction of a linting tool I just
discovered today. I've chosen to ignore two of the linting rules (as documented
in .config/ansible-lint.yml), but adopted the rest of the suggestions.

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,3 +2,6 @@
 inventory = inventory.yml
 vars_plugins = ~/.ansible/plugins/vars
 nocows = 1
+
+[ssh_connection]
+ssh_args=-o ControlMaster=auto -o ControlPersist=60s -o ControlPath=/tmp/ansible-ssh-%h-%p-%r -o ForwardAgent=yes
