--- a/roles/dotfiles_copy/tasks/main.yml
+++ b/roles/dotfiles_copy/tasks/main.yml
@@ -1,15 +1,20 @@
-#TODO: Select dots to copy based on installed packages
+---
+# TODO: Select dots to copy based on installed packages
 
 - name: Copy selected dots
   tags: config, dots
   copy:
     # Depends on dotfiles being symlinked at the `files` directory
     # ln -s ~/.dotfiles roles/dotfiles_copy/files
-    src:  "{{ item.src }}"
-    dest: "/home/{{ user }}/{{ item.dst }}"
-    force: yes
+    src: "{{ item.src }}"
+    dest: /home/{{ user }}/{{ item.dst }}
+    force: true
+    mode: 0660
+    owner: "{{ user }}"
+    group: "{{ user }}"
+
   with_items:
-    - { src: "vim/vimrc", dst: ".vimrc" }
+    - { src: vim/vimrc, dst: .vimrc }
     # - { src: "i3", dst: ".config/i3" }
     # - { src: "i3status", dst: ".config/i3status" }
     # - { src: "kitty", dst: ".config/kitty" }
@@ -18,8 +23,11 @@
 - name: Copy selected dots to root
   tags: config, dots
   copy:
-    src:  "{{ item.src }}"
-    dest: "/root/{{ item.dst }}"
-    force: yes
+    src: "{{ item.src }}"
+    dest: /root/{{ item.dst }}
+    force: true
+    mode: 0660
+    owner: root
+    group: root
   with_items:
-    - { src: "vim/vimrc", dst: ".vimrc" }
+    - { src: vim/vimrc, dst: .vimrc }
