--- a/roles/mariadb_backup/tasks/main.yml
+++ b/roles/mariadb_backup/tasks/main.yml
@@ -1,17 +1,18 @@
+---
 - name: Copy backup script
   tags: backup
   template:
-    src:  "backup_mariadb.sh"
-    dest: "/root/.backup_mariadb.sh"
+    src: backup_mariadb.sh
+    dest: /root/.backup_mariadb.sh
     owner: root
     group: root
-    mode: '0700'
-    force: yes
+    mode: "0700"
+    force: true
 
 - name: Enable cron task
   tags: config, cron
   cron:
-    name: "Back up MariaDB"
+    name: Back up MariaDB
     minute: "25"
     hour: "2"
-    job: "/root/.backup_mariadb.sh > /dev/null"
+    job: /root/.backup_mariadb.sh > /dev/null
