--- a/roles/xterm_js/tasks/main.yml
+++ b/roles/xterm_js/tasks/main.yml
@@ -1,6 +1,7 @@
+---
 - name: Enable terminal on serial port
   tags: config
   systemd:
     name: serial-getty@ttyS0.service
-    enabled: yes
+    enabled: true
     state: started
