Fix git repo cloning
Before, git repos were cloned via HTTP, which wouldn't have worked seamlessly
for private repos. Now, they're cloned via SSH, which requires SSH agent
forwarding to be enabled. However, the socket on the remote system is in a
directory that restricts its access to root users. My solution is to
temporarly change ownership to the user we're becoming, use the socket, and
then change it back immediately after.

--- a/roles/arch_workstation/tasks/main.yml
+++ b/roles/arch_workstation/tasks/main.yml
@@ -150,6 +150,7 @@
       - magic-wormhole # file transfer
       - protonmail-bridge # allows local use of ProtonMail
       - protonvpn # ProtonVPN CLI and GUI
+      - refind-theme-regular-git # theme for refind
       - spotify # music
       - standardnotes-desktop # notes
       - typora-free # markdown editor/exporter
