--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,5 +3,7 @@ inventory = inventory.yml
 vars_plugins = ~/.ansible/plugins/vars
 nocows = 1
 
+# Needed for SSH agent forwarding, used to clone git repos
+# https://stackoverflow.com/questions/24124140/ssh-agent-forwarding-with-ansible
 [ssh_connection]
 ssh_args=-o ControlMaster=auto -o ControlPersist=60s -o ControlPath=/tmp/ansible-ssh-%h-%p-%r -o ForwardAgent=yes
