Add zfs and nfs config, fix dotfile cloning
ZFS has a basic setup to enable loading keys and set ARC size. NFS has the
mounts manually configured, as ZFS has proven unreliable at making the mounts
available correctly when using the `sharenfs` property. Fix dotfile cloning to
not put it into a strange detached head state.

--- a/host_vars/apps.yml
+++ b/host_vars/apps.yml
@@ -1,6 +1,6 @@
 ---
 # NFS directories mounted on file server
-nfs_dirs: [/ssd/app, /hdd/enc/app]
+nfs_dirs: [/ssd/app, /hdd/enc/app/nextcloud]
 # Healthchecks.io status monitor ID
 healthcheck_id: !vault |
   $ANSIBLE_VAULT;1.1;AES256
