--- a/roles/dotfiles_clone/tasks/main.yml
+++ b/roles/dotfiles_clone/tasks/main.yml
@@ -52,6 +52,7 @@
     - { src: polybar, dst: .config/polybar }
     - { src: kitty, dst: .config/kitty }
     - { src: redshift, dst: .config/redshift }
+    - { src: xfce4, dst: .config/xfce4 }
     - { src: zsh/zshrc.local, dst: .zshrc.local }
     # The following creates and enables an SSH agent
     - { src: ssh-agent/ssh-agent.service, dst: .config/systemd/user/default.target.wants/ssh-agent.service }
