--- a/roles/backblaze/tasks/main.yml
+++ b/roles/backblaze/tasks/main.yml
@@ -42,4 +42,4 @@
     name: Back up to Backblaze
     minute: "30"
     hour: "5"
-    job: backblaze-backup
+    job: /usr/local/sbin/backblaze-backup
