--- a/roles/arch_desktop/tasks/main.yml
+++ b/roles/arch_desktop/tasks/main.yml
@@ -7,3 +7,11 @@
       [SeatDefaults]
       display-setup-script=xrandr --output DP-4 --mode 2560x1440 --rate 165 --pos 0x400 --primary --output DP-2 --mode 3840x2160 --rate 60 --pos 2560x0
       session-setup-script=xrandr --output DP-4 --mode 2560x1440 --rate 165 --pos 0x400 --primary --output DP-2 --mode 3840x2160 --rate 60 --pos 2560x0
+
+
+- name: Configure cursor size
+  tags: config
+  blockinfile:
+    path: /home/{{ user }}/.Xresources
+    block: |-
+      Xcursor.size: 16
