Add themes, fix nfs exports
Adds a number of themes (in combination with dotfiles) to various applications.
Updates nfs exports to reflect deleted/added applications

Configure

--- a/roles/docker/templates/gaming-compose.yml
+++ b/roles/docker/templates/gaming-compose.yml
@@ -64,6 +64,6 @@ services:
       - /ssd/app/games/factorio/loriini:/factorio
 
     environment:
-      UPDATE_MODS_ON_START: 'true'
+      UPDATE_MODS_ON_START: 'false'
       SAVE_NAME: "Loriini"
 
