--- a/roles/arch_workstation/tasks/main.yml
+++ b/roles/arch_workstation/tasks/main.yml
@@ -91,6 +91,7 @@
       - eog # image viewer
       - fd # better find
       - git # git
+      - git-lfs # large file support
       - hexyl # better xxd
       - iftop # network monitor
       - maim # screenshot utility
@@ -148,9 +149,11 @@
   become: false
   kewlfft.aur.aur:
     name:
+      - appimagelauncher # launcher for appimages
       - autotiling # i3 window tiling
       - brother-hll2350dw # print drivers
       - bfg # clean git repos
+      - catppuccin-gtk-theme-macchiato # gtk theme
       - git-secrets # dirty word monitoring
       - i3lock-multimonitor # mutimonitor support for i3lock
       - magic-wormhole # file transfer
@@ -162,6 +165,7 @@
       - typora-free # markdown editor/exporter
       - vmware-horizon-client # remote desktop client
       - vmware-horizon-smartcard # smartcard support
+      - xcursor-simp1e-catpuccin # cursor theme
     state: present
 
 - name: Configure lightdm-gtk-greeter
